tests/conformance/shaclc/negative/bad-dir.shaclc
PREFIX ex: <http://example.org/test#>

shape ex:TestShape {
	ex:p hasValue="x"@en--up .
}
